@@ -1035,7 +1035,7 @@ x with regard to dry air</p></td>
 </tr>
 </tbody>
 </table>
-<p>This is the August-Roche-Magnus formula for the saturated water vapour pressure</p>
+<p>This is the August-Roche-Magnus formula for the saturated water vapor pressure</p>
 <div class="math notranslate nohighlight">
 \[e_{w} = 610.94e^{\frac{17.625(T-273.15)}{(T-273.15)+243.04}}\]</div>
 </div></blockquote>
