@@ -2286,8 +2286,8 @@ methyl cyanide</p></td>
 <td><p>H2O as snow/ice</p></td>
 <td><p>SWC</p></td>
 </tr>
-<tr class="row-even"><td><p>water_vapour</p></td>
-<td><p>H2O as water vapour</p></td>
+<tr class="row-even"><td><p>water_vapor</p></td>
+<td><p>H2O as water vapor</p></td>
 <td></td>
 </tr>
 </tbody>
