@@ -162,7 +162,7 @@
 <td><p>float</p></td>
 <td><p>{<em>latitude</em>, <em>longitude</em>}</p></td>
 <td><p>[kg/m^2]</p></td>
-<td><p>total column water vapour</p></td>
+<td><p>total column water vapor</p></td>
 </tr>
 <tr class="row-even"><td><p><strong>relative_vorticity</strong></p></td>
 <td><p>float</p></td>
