@@ -126,13 +126,13 @@
 <td><p>double</p></td>
 <td><p>{<em>time</em>, <em>vertical</em>}</p></td>
 <td><p>[ppv]</p></td>
-<td><p>water vapour volume mixing ratio</p></td>
+<td><p>water vapor volume mixing ratio</p></td>
 </tr>
 <tr class="row-even"><td><p><strong>H2O_volume_mixing_ratio_uncertainty</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>, <em>vertical</em>}</p></td>
 <td><p>[ppv]</p></td>
-<td><p>water vapour volume mixing ratio precision</p></td>
+<td><p>water vapor volume mixing ratio precision</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>index</strong></p></td>
 <td><p>int32</p></td>
