@@ -3355,11 +3355,11 @@
 </tr>
 <tr class="row-odd"><td><p><a class="reference internal" href="TES_L2_H2O_Limb.html"><span class="doc">TES_L2_H2O_Limb</span></a></p></td>
 <td><p>AURA_TES/TL2H2OL</p></td>
-<td><p>TES water vapour limb profile</p></td>
+<td><p>TES water vapor limb profile</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="reference internal" href="TES_L2_H2O_Nadir.html"><span class="doc">TES_L2_H2O_Nadir</span></a></p></td>
 <td><p>AURA_TES/TL2H2ON</p></td>
-<td><p>TES water vapour nadir profile</p></td>
+<td><p>TES water vapor nadir profile</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="reference internal" href="TES_L2_HCOOH_Nadir.html"><span class="doc">TES_L2_HCOOH_Nadir</span></a></p></td>
 <td><p>AURA_TES/TL2FORN</p></td>
